Adjusting theme images

--- a/themes/templates/themes/basic_update.html
+++ b/themes/templates/themes/basic_update.html
@@ -26,7 +26,7 @@
 									<label for="{{ field.auto_id }}">{{ field.label }}</label>
 								{% endif %}
 								
-								{% render_field field class='form-control' %}
+								{% render_field field %}
 								
 								<div class="input-group common-file-input">
 				                  	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
