--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
-	<link href="{{ theme.favicon }}" rel="shortcut icon" />
+	<link href="{{ theme.favicon_url }}" rel="shortcut icon" />
 	<!-- Roboto font -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
