--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -33,11 +33,11 @@
     <div id="core-subjects-options-div">
         <ul class="core-subjects-options">
             {% if all %}
-                <a href="{% url 'subjects:index' %}"><li >{% trans "My subjects" %}</li></a>
-                <a href="{% url 'subjects:index' 'all' %}" ><li class="active">{% trans "All subjects" %}</li></a>
+                <a href="{% url 'subjects:index' %}"><li >{% trans "My subjects" %} ({{ totals.my_subjects }})</li></a>
+                <a href="{% url 'subjects:index' 'all' %}" ><li class="active">{% trans "All subjects" %} ({{ totals.all_subjects }})</li></a>
             {% else %}
-                <a href="{% url 'subjects:index' %}"><li class="active">{% trans "My subjects" %}</li></a>
-                <a href="{% url 'subjects:index' 'all' %}" ><li>{% trans "All subjects" %}</li></a>
+                <a href="{% url 'subjects:index' %}"><li class="active">{% trans "My subjects" %} ({{ totals.my_subjects }})</li></a>
+                <a href="{% url 'subjects:index' 'all' %}" ><li>{% trans "All subjects" %} ({{ totals.all_subjects }})</li></a>
             {% endif %}
             
         </ul>
@@ -114,7 +114,7 @@
                                 <div class="col-md-12 category-header">
                                     <h4 class="panel-title">
                                         <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{category.slug}}">
-                                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}}
+                                            <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{category.name}} ({{ category.subject_category.count }})
                                         </a>
                                     </h4>
                                     
