--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -612,3 +612,40 @@ ul, li {
     font-family: Roboto;
     font-weight: normal;
 }
+
+/* jPages */
+.holder a.jp-disabled, a.jp-disabled:hover {
+    cursor: not-allowed;
+}
+
+.holder a.jp-current, a.jp-current:hover {
+    cursor: default;
+}
+
+.holder a.jp-previous {
+    margin-right: 0px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.holder a.jp-next {
+    margin-left: 0px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.holder a, .holder span {
+    font-size: 18px;
+    margin: 0px;
+    padding: 3px 9px;
+    line-height: 1.42857143;
+}
+
+.holder a.jp-current, a.jp-current:hover {
+    font-weight: 300;
+}
+
+.holder a:hover, .holder a:focus {
+    text-decoration: none;
+}
+/* end jPages */
