--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -5,20 +5,72 @@
 
 {% block javascript%}
     {{ block.super }}
-    
 {% endblock%}
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Home' 'subjects:home' %}
-    
+    {% breadcrumb subject.category 'subjects:index' %}
+    {% breadcrumb subject 'subjects:view' subject.slug %}
 {% endblock %}
 
-
 {% block content %}
+	{% if subject.visible %}
+		<div class="panel panel-info subject-panel">
+        	<div class="panel-heading">
+	{% elif request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
+		<div class="panel panel-info subject-panel-invisible">
+        	<div class="panel-heading panel-invisible">
+    {% endif %}
+            <div class="row">
+                <div class="col-md-12 category-header">
+                    <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                        <span>{{subject.name}}</span>
+                    </h4>
 
-	{% include "subjects/subject_card.html" %}
+                    <div class="col-md-5 pull-right category-card-items">
+                        {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
+                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                            </a>
+                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                                <li><a href="{% url 'subjects:replicate' subject.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                                <li><a href="{% url 'subjects:update' subject.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                                <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                            </ul>
+                        {% endif %}
+                        <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="{{subject.slug}}" class="panel-collapse in collapse category-panel-content">
+            <div class="row">
+                <div class="col-md-6">
+                    {% if subject.professor.all|length > 0  %}
+                        <h4><b>{% trans "Professor(s) " %}: </b>
+                            {{ subject.professor.all|join:', ' }}
+                        </h4>
+                    {% else %}
+                        <h4> {% trans "It doesn't possess professors" %} </h4>
+                    {% endif %}
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
+                </div>
+            </div>
 
+            <p>{{subject.description|safe}}</p>
 
-	
+            {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
+                <a href="{% url 'subjects:create' subject.category.slug %}"><button class="btn btn-sm btn-primary btn-raised btn-block"> {% trans "Create new topic" %} </button></a>
+            {% endif %}
+            
+        </div>
+    </div>
 {% endblock content %}
