--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -14,6 +14,17 @@
 {% endblock %}
 
 {% block content %}
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
+
 	{% if subject.visible %}
 		<div class="panel panel-info subject-panel">
         	<div class="panel-heading">
@@ -68,7 +79,7 @@
             <p>{{subject.description|safe}}</p>
 
             {% if request.user in subject.professor.all or request.user in subject.category.coordinators.all or request.user.is_staff %}
-                <a href="{% url 'subjects:create' subject.category.slug %}"><button class="btn btn-sm btn-primary btn-raised btn-block"> {% trans "Create new topic" %} </button></a>
+                <a href="{% url 'topics:create' subject.slug %}"><button class="btn btn-sm btn-primary btn-raised btn-block"> {% trans "Create new topic" %} </button></a>
             {% endif %}
             
         </div>
