Adjusting sidebar menu color

--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -30,7 +30,7 @@ a, a:focus, a:hover {
 }
 
 #sidebar-menu .item {
-	background-color: #26A69A;
+	background-color: #009688;
     color: white;
 }
 
