--- a/users/templates/users/delete.html
+++ b/users/templates/users/delete.html
@@ -20,7 +20,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
-                                <input type="submit" class="btn btn-raised btn-block btn-primary" value="{% trans 'Remove' %}" />
+                                <input type="submit" class="btn btn-raised btn-block btn-success" value="{% trans 'Remove' %}" />
                             </div>
                             <div class="pull-right">
                                 <a href="{% url 'users:manage' %}" class="btn btn-raised btn-block btn-default" >{% trans 'Cancel' %}</a>
