--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -87,7 +87,7 @@
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
 								<div class="pull-left">
-									<input type="submit" value="{% trans 'Register' %}" class="btn btn-raised btn-primary" />
+									<input type="submit" value="{% trans 'Register' %}" class="btn btn-raised btn-success" />
 								</div>
 								<div class="pull-right">
 									<a href="{% url 'users:login' %}" class="btn btn-raised btn-default"> {% trans 'Back' %}</a>
