--- a/categories/templates/categories/delete.html
+++ b/categories/templates/categories/delete.html
@@ -16,7 +16,7 @@
       <div id="delete-category-footer"class="modal-footer">
         <!-- Don't remove that!!!  -->
         <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
-        <button type="submit" id="button" form="delete_form" class="btn btn-primary btn-raised erase-button">{% trans "Delete" %}</button>
+        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised erase-button">{% trans "Delete" %}</button>
         {% if index %}
         <script>
           $("#delete_form").submit(function(event) {
