--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -26,7 +26,11 @@
     {% endif %}
 
     {% if user.is_staff %}
-        <a href="{% url 'categories:create' %}"><button id="create-category"> {% trans "Create Category" %}</button></a>
+        <div class='row'>
+            <div class="col-md-offset-3 col-md-6">
+                <a href="{% url 'categories:create' %}" class="btn btn-raised btn-success btn-block">{% trans "Create Category" %}</a>
+            </div>
+        </div>
     {% endif %}
 
     {% if not user.is_staff %}
