--- a/security/templates/security/update.html
+++ b/security/templates/security/update.html
@@ -39,7 +39,7 @@
 					{% endfor %}
 					<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
 						<div class="text-center">
-							<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />
+							<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
 						</div>
 					</div>
 				</form>
