--- a/subjects/templates/subjects/_form.html
+++ b/subjects/templates/subjects/_form.html
@@ -84,7 +84,7 @@
 		{% endif %}
 	{% endfor %}
 	<div class="row text-center">
-		<input type="submit" value="{% trans 'Save' %}" class="btn btn-primary btn-raised" />
+		<input type="submit" value="{% trans 'Save' %}" class="btn btn-success btn-raised" />
 	</div>
 </form>
 
