--- a/subjects/templates/subjects/delete.html
+++ b/subjects/templates/subjects/delete.html
@@ -21,7 +21,7 @@
       <div class="modal-footer">
         <!-- Don't remove that!!!  -->
         <button type="button" class="btn btn-raised btn-default" data-dismiss="modal">{% trans "Close" %}</button>
-        <button type="submit" id="button" form="delete_form" class="btn btn-primary btn-raised">{% trans "Delete" %}</button>
+        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised">{% trans "Delete" %}</button>
 
         {% if index %}
         <script>
