--- a/users/templates/users/_form.html
+++ b/users/templates/users/_form.html
@@ -58,7 +58,7 @@
 	{% endfor %}
 	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
 		<div class="pull-left">
-			<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />
+			<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
 		</div>
 		<div class="pull-right">
 			<a href="{% url back_url %}" class="btn btn-raised btn-default">{% trans 'Cancel' %}</a>
