--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -62,6 +62,7 @@
 	<!-- Summernote -->
 	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
 	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
+    
     {% with 'css/themes/'|add:theme.css_style|add:'.css' as theme_selected %}
         <link rel="stylesheet" type="text/css" href="{% static theme_selected %}">
     {% endwith %}
@@ -86,7 +87,7 @@
                     <form id="SearchForm" action="#" method="get" accept-charset="utf-8" class="navbar-form">
                         <div class="input-group">
                             <div class="form-group is-empty" >
-                                <input type="text" class="form-control top-search" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search">
+                                <input type="text" class="form-control top-search" placeholder="{% trans 'Search for subjects and resources' %}" name="search">
                             </div>
                             <span class="input-group-btn input-group-sm">
                                 <button type="submit" class="btn btn-primary" id="btn-search">
