--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -6,6 +6,7 @@
 <div class="panel-group subject-group" id="topics-accordion" role="tablist" aria-multiselectable="true">
 	<input type="hidden" class="url_order" value="{% url 'topics:update_order' %}" />
 	<input type="hidden" class="subs_url" value="{% url 'subjects:view' subject.slug %}" />
+	
 	{% for topic in subject.topic_subject.all %}
 		{% if not topic.repository and topic.visible or has_subject_permissions %}
 			<div class="panel panel-info {% if not topic.visible or topic.repository %} topic-panel-invisible {% else %} topic-panel {% endif %} topic-panel">
@@ -25,7 +26,7 @@
 		                            </a>
 		                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
 		                                <li><a href="{% url 'topics:update' subject.slug topic.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-		                                <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+		                                <li><a href="javascript:delete_topic('{% url 'topics:delete' topic.slug %}')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
 		                            </ul>
 		                            <a href="" ><i class="fa fa-arrows" aria-hidden="true"></i></a>
 		                    	</div>
