--- a/subjects/templates/subjects/subscribe.html
+++ b/subjects/templates/subjects/subscribe.html
@@ -1,22 +1,35 @@
 {% load static i18n permission_tags %}
 
 <!-- Modal (remember to change the ids!!!) -->
-<div class="modal fade" id="subscribe_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="subject-subscribe" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-           <!-- Modal Body -->
+      <!-- Modal Header -->
+      <div class="modal-header">
+
+        <h4 class="modal-title" id="myModalLabel">{% trans "Delete Subject" %}</h4>
+      </div>
+      <!-- Modal Body -->
       <div class="modal-body">
         <!-- Put ONLY your content here!!!  -->
-        <form id="modal_form" action="{% url 'subjects:subscribe' subject.slug %}" method="post">
-          {% csrf_token %}
-          <p>{% trans 'Are you sure you want to subscribe to this subject' %} "{{subject.name}}"?</p>
-        </form>
+    <form id="subscribe" action="" method="post">
+      {% csrf_token %}
+        <p>{% trans 'Are you sure you want to subscribe to the subject' %} "{{subject.name}}"?</p>
+    </form>
       </div>
       <!-- Modal Footer -->
-      <div id="delete-category-footer"class="modal-footer">
+      <div class="modal-footer">
         <!-- Don't remove that!!!  -->
-        <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
-        <button type="submit" id="button" form="delete_form" class="btn btn-primary btn-raised erase-button">{% trans "Subcribe" %}</button>
+        <button type="button" class="btn btn-raised btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
+        <button type="submit" id="button" form="subscribe" class="btn btn-success btn-raised">{% trans "Ok" %}</button>
+
+       
+        <script>
+          $("#subscribe").submit(function(event) {
+            SubscribeSubject.subscribe("{% url 'subjects:subscribe' subject.slug %}",$(this).serialize(),"#subject_{{subject.slug}}");
+            event.preventDefault();
+          });
+        </script>
         
       </div>
     </div>
