--- a/subjects/templates/subjects/delete.html
+++ b/subjects/templates/subjects/delete.html
@@ -4,11 +4,7 @@
 <div class="modal fade" id="subject" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <!-- Modal Header -->
-      <div class="modal-header">
-
-        <h4 class="modal-title" id="myModalLabel">{% trans "Delete Subject" %}</h4>
-      </div>
+     
       <!-- Modal Body -->
       <div class="modal-body">
         <!-- Put ONLY your content here!!!  -->
@@ -18,10 +14,10 @@
 		</form>
       </div>
       <!-- Modal Footer -->
-      <div class="modal-footer">
+      <div id="delete-category-footer" class="modal-footer">
         <!-- Don't remove that!!!  -->
         <button type="button" class="btn btn-raised btn-default" data-dismiss="modal">{% trans "Close" %}</button>
-        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised">{% trans "Delete" %}</button>
+        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised erase-button">{% trans "Delete" %}</button>
 
         {% if index %}
         <script>
