--- a/subjects/templates/subjects/delete.html
+++ b/subjects/templates/subjects/delete.html
@@ -16,8 +16,8 @@
       <!-- Modal Footer -->
       <div id="delete-category-footer" class="modal-footer">
         <!-- Don't remove that!!!  -->
-        <button type="button" class="btn btn-raised btn-default" data-dismiss="modal">{% trans "Close" %}</button>
-        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised erase-button">{% trans "Delete" %}</button>
+        <button type="button" class="btn btn-raised btn-default" data-dismiss="modal">{% trans "CLOSE" %}</button>
+        <button type="submit" id="button" form="delete_form" class="btn btn-success btn-raised erase-button">{% trans "DELETE" %}</button>
 
         {% if index %}
         <script>
